# croutons

./: .clang-format  .gitignore  .gitignore.license  CMakeLists.txt  CroutonsConfig.cmake.in  README.md  coroutine_integration.h  coroutine_integration_network.h  croutons.qbs  foo.qbs  future.h  futurebase.h  main.cpp  main.qml  test.qml
lib/: CMakeLists.txt  coroutine_integration.h  coroutine_integration_network.h  coroutineintegration.h  coroutineintegrationnetwork.h  croutons.qbs  effects.h  future.h  futurebase.h  futurebase_p.cpp
test/: main.cpp  test.qbs
